src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Dashboard_URL__c</fullName>
        <label>Account Dashboard URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_ID18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Account ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <description>Account Notes - requested by Brandon Binder 3/5/18</description>
        <inlineHelpText>Use to save internal notes about this account.</inlineHelpText>
        <label>Account Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Complete_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Synergy Sales Rep will complete this</inlineHelpText>
        <label>Account Plan Complete/Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <inlineHelpText>Please copy/paste the google doc URL for your Account Plan here</inlineHelpText>
        <label>Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>App_Modernization_D_Status_Reason__c</fullName>
        <label>App Modernization D Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>App_Modernization__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Target - Recent Decision/Cycle</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Budget/Timing</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Lacks Driver/Profile</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Breadth</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Depth/Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Modernization_Details__c</fullName>
        <label>App Mod Priority Account Quarterly Goals</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>App_Modernization__c</fullName>
        <label>App Modernization Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Active Opportunity</fullName>
                </value>
                <value>
                    <fullName>B - Target Accounts</fullName>
                    <label>B - Priority Accounts</label>
                </value>
                <value>
                    <fullName>C - Limited KnowledgeUndo</fullName>
                    <label>C - Limited Knowledge</label>
                </value>
                <value>
                    <fullName>D - No opp next 18-24 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Area is determined by the account owner's area on the user record</description>
        <formula>TEXT(Owner.Area__c)</formula>
        <inlineHelpText>If this is incorrect, please contact your sys admin</inlineHelpText>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAT_Unified_Weekly__c</fullName>
        <description>Tracker story #165135035</description>
        <inlineHelpText>Link to BAT Unified Weekly report</inlineHelpText>
        <label>BAT Unified Weekly</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Billing_Street_1__c</fullName>
        <formula>IF(
  CONTAINS(BillingStreet, MID($Label.TwoLine,3,1)), 
  LEFT(
    BillingStreet, 
    FIND(MID($Label.TwoLine,3,1), BillingStreet)
  ),
  BillingStreet
)</formula>
        <label>Billing Street 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_2__c</fullName>
        <formula>IF( 
CONTAINS(BillingStreet, MID($Label.TwoLine,3,1)), 

SUBSTITUTE( 
SUBSTITUTE( 

RIGHT( 
BillingStreet, 
(LEN(BillingStreet) - (FIND(MID($Label.TwoLine,3,1), BillingStreet)))) 

, 
MID($Label.TwoLine,3,1) 
, 
'' 
) 


, 
MID($Label.TwoLine,2,1) 
, 
'' 
) 


,'')</formula>
        <label>Billing Street 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleared_by_Compliance_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to be changed by Compliance team based on the status received from Visual Compliance Team</description>
        <label>Cleared by Compliance Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Native_Security_D_Status_Reason__c</fullName>
        <label>Cloud Native Security D Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cloud_Native_Security__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Target - Recent Decision/Cycle</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Budget/Timing</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Lacks Driver/Profile</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Breadth</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Depth/Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Native_Security_Details__c</fullName>
        <label>Cloud-Nat Sec Priority Acct Qtrly Goals</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cloud_Native_Security__c</fullName>
        <label>Cloud Native Security Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Active Opportunity</fullName>
                </value>
                <value>
                    <fullName>B - Target Accounts</fullName>
                    <label>B - Priority Accounts</label>
                </value>
                <value>
                    <fullName>C - Limited Knowledge</fullName>
                </value>
                <value>
                    <fullName>D - No opp next 18-24 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Orchestration_D_Status_Reason__c</fullName>
        <label>Container Orchestration D Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Container_Orchestration__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Target - Recent Decision/Cycle</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Budget/Timing</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Lacks Driver/Profile</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Breadth</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Depth/Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Orchestration_Details__c</fullName>
        <label>Container Orch Priority Acct Qtry Goals</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Container_Orchestration__c</fullName>
        <label>Container Orchestration Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Active Opportunity</fullName>
                </value>
                <value>
                    <fullName>B - Target Accounts</fullName>
                    <label>B - Priority Accounts</label>
                </value>
                <value>
                    <fullName>C - Limited Knowledge</fullName>
                </value>
                <value>
                    <fullName>D - No opp next 18-24 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Platforms_Details__c</fullName>
        <label>Container Platforms Details</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Container_Platforms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Container Platforms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coverage_of_Qualified_Opps__c</fullName>
        <formula>HasOpenOppsAllDates__c  &gt; 0</formula>
        <label>Coverage of Qualified Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Region__c</fullName>
        <description>Region of the user that created this account, used for reporting only</description>
        <formula>TEXT( CreatedBy.Region__c )</formula>
        <label>Created By Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Theater__c</fullName>
        <description>Theater of the user who created this Account, used for reporting only</description>
        <formula>TEXT(  CreatedBy.Theater__c  )</formula>
        <label>Created by Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>BAT</fullName>
                </value>
                <value>
                    <fullName>PWS</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTS_GTO_Name__c</fullName>
        <label>DTS/GTO Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Status_Reason__c</fullName>
        <description>Added 3/14/2018 - Eric Landon request. PAS Account dependent field. If D chosen, this field is required.</description>
        <inlineHelpText>Click here for help with definitions: https://pivotal.my.salesforce.com/sfc/#version?selectedDocumentId=0690P000003fqAq</inlineHelpText>
        <label>PAS D Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PAS__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Target - Recent Decision/Cycle</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Budget/Timing</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Lacks Driver/Profile</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Breadth</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Depth/Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DellEMC_Cloud_Platform_Specialist_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DellEMC Cloud Platform Specialist</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <value>001U000000aRbPx</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (DellEMC Cloud Platform Specialist Name)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DellEMC_Field_CTO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DellEMC Field CTO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (DellEMC Field CTO)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dell_EMC_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for and select a Contact attached to a Dell account</inlineHelpText>
        <label>Dell/EMC Rep</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>001U000000aRbPx</value>
            </filterItems>
            <infoMessage>Select a contact from the Dell Inc main account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Dell/EMC Rep)</relationshipLabel>
        <relationshipName>Account_DellEMCRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dell_TPA_TLA_Target_Amount__c</fullName>
        <inlineHelpText>Total TLA/TPA opportunity value</inlineHelpText>
        <label>Dell TPA/TLA Target Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dell_TPA_TLA_Target_Quarter__c</fullName>
        <inlineHelpText>What Quarter is the TLA/TPA coming up for renewal or new TLA/TPA close date?</inlineHelpText>
        <label>Dell TPA/TLA Target Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_TPA_TLA_Target__c</fullName>
        <label>Dell TPA/TLA Target?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_TPA_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dell TPA Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dell_Tech_Select_GAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dell Tech Select Contact lookup</description>
        <inlineHelpText>Search for and select a Contact attached to a Dell account</inlineHelpText>
        <label>Dell Tech Select/GAM</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>001U000000aRbPx</value>
            </filterItems>
            <infoMessage>Select a Contact from the Dell Inc main account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_DellTechSelect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dell_X_SAB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Jag Brar requested to track Dell X-SAB Alliances cross sell accts 3/9/2018</description>
        <label>Dell X-SAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMC_S2_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify a customer as 24/7 Sev 2 Support.</description>
        <label>EMC S2 Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Top_Accounts__c</fullName>
        <label>Field Top Accounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AE Top Accounts</fullName>
                </value>
                <value>
                    <fullName>RD Top Accounts</fullName>
                </value>
                <value>
                    <fullName>Area Leader Top Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Purchase_Date_Data_Products__c</fullName>
        <description>This fields holds the first purchase of Data products</description>
        <label>First Purchase Date - Data Products</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Purchase_Date_Labs__c</fullName>
        <description>This fields holds the first purchase date for Labs</description>
        <label>First Purchase Date - Labs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_purchase_Date_PCF__c</fullName>
        <description>This field holds the first purchase date of PCF for this Account computing all the booked opportunities.</description>
        <label>First purchase Date - PCF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <label>Focus Account?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_2000_Rank__c</fullName>
        <label>Global 2000 Rank</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder__c</fullName>
        <description>Custom link to Google Drive shared folder for this Account</description>
        <formula>HYPERLINK("https://script.google.com/a/macros/pivotal.io/s/AKfycbxShw_bt0_HUQW2VRXDJU16MnToL-XrMGApstnyT9S0/dev?AccountID=" &amp; Id &amp; "&amp;AccountName=" &amp; SUBSTITUTE(Name, "&amp;", "%26"), "Click here to view Google Drive folder for this Account" , "_blank")</formula>
        <inlineHelpText>Direct link to corresponding searchable shared Google Drive folder for all artifacts related to this Account.</inlineHelpText>
        <label>Google Drive Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Status__c</fullName>
        <inlineHelpText>All newly created Accounts must be reviewed and approved by the Governance team.</inlineHelpText>
        <label>Governance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <formula>If(ISPICKVAL( Governance_Status__c , "Approved"),IMAGE("/resource/trac_Governance/approved.png","Approved"),
IMAGE("/resource/trac_Governance/pending.png","Pending"))</formula>
        <label>Governance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOpenOppsAllDates__c</fullName>
        <label>QualifiedOpps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Discovery, Framing, Negotiate &amp; Close, Gain Sponsorship</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked if the Targeted Account is a High Prioritized one.</description>
        <inlineHelpText>Used in EMEA - This field is checked if the Targeted Account is a High Prioritized one.</inlineHelpText>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NamedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Innovative_AppDev_D_Status_Reason__c</fullName>
        <label>Innovative AppDev D Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Innovative_AppDev__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Target - Recent Decision/Cycle</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Budget/Timing</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Lacks Driver/Profile</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Breadth</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Depth/Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Innovative_AppDev_Details__c</fullName>
        <label>Priority Account Quarterly Goals</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Innovative_AppDev__c</fullName>
        <label>Innovative AppDev Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - Active Opportunity</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B - Priority Accounts</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - Limited Knowledge</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D - No opp next 18-24 Months</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Joint_Exec_Briefing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Exec Briefing Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_EMC__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID EMC</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_ID_SPRING__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID SPRING</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_ID_VMWARE__c</fullName>
        <label>Legacy ID VMWARE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mintigo_Industry__c</fullName>
        <label>Mintigo - Industry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mintigo_Predictive_Score__c</fullName>
        <label>Mintigo Predictive Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mintigo_Sub_Industry__c</fullName>
        <label>Mintigo - Sub Industry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mintigo_hash__c</fullName>
        <label>Mintigo hash</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mintigo_update_datetime__c</fullName>
        <label>Mintigo Update Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <label>Target Account?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_from_Compliance_Team__c</fullName>
        <inlineHelpText>This field will be filled by Compliance team for flagged/blocked accounts</inlineHelpText>
        <label>Notes from Compliance Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofEmployees__c</fullName>
        <label>Number of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 99</fullName>
                </value>
                <value>
                    <fullName>100 - 499</fullName>
                </value>
                <value>
                    <fullName>500 - 999</fullName>
                </value>
                <value>
                    <fullName>1,000 - 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 - 9,999</fullName>
                </value>
                <value>
                    <fullName>&gt;10,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAS__c</fullName>
        <description>Added 3/14/2018.... Eric Landon and BBB requested field to track likelihood to convert on accts.</description>
        <inlineHelpText>&lt;a href="https://pivotal.my.salesforce.com/sfc/#version?selectedVersionId=0680P0000046tAO"target="_blank"&gt;Click here&lt;/a&gt;</inlineHelpText>
        <label>PAS Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - Active Opportunity</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B - Target Accounts</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - Limited Knowledge</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D - No opp next 18-24 Months</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PA_Coverage_rollup__c</fullName>
        <inlineHelpText>sum of Percentage of Effort of Team Member Platform Architects</inlineHelpText>
        <label>PA Coverage</label>
        <summarizedField>Team_Member__c.Percentage_of_Effort__c</summarizedField>
        <summaryFilterItems>
            <field>Team_Member__c.Team_Member_Role__c</field>
            <operation>equals</operation>
            <value>Platform Architect</value>
        </summaryFilterItems>
        <summaryForeignKey>Team_Member__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Federation Partner</fullName>
                </value>
                <value>
                    <fullName>Global System Integrator</fullName>
                </value>
                <value>
                    <fullName>Outbound OEM/ISV</fullName>
                </value>
                <value>
                    <fullName>Consulting Partner</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Technology Alliance</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pivotal_Account_Category__c</fullName>
        <inlineHelpText>A - Prime: potential for $7M+ annual run rate
B - Named: potential for $3-7M annual run rate
C - Territory: potential for less than $3M run rate</inlineHelpText>
        <label>Pivotal Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Prime</fullName>
                </value>
                <value>
                    <fullName>B - Named</fullName>
                </value>
                <value>
                    <fullName>C - Territory</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pivotal_Customer_Number__c</fullName>
        <displayFormat>AN-{0000000}</displayFormat>
        <label>Pivotal Customer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pivotal_Greenplum_Cores_Deployed__c</fullName>
        <label>Pivotal Greenplum Cores Deployed?</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_as_a_Product_D_Status_Reason__c</fullName>
        <label>Platform as a Product D Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform_as_a_Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Target - Recent Decision/Cycle</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Budget/Timing</fullName>
                </value>
                <value>
                    <fullName>Not a Target - Lacks Driver/Profile</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Breadth</fullName>
                </value>
                <value>
                    <fullName>Not a Fit - Product: Functional Depth/Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_as_a_Product_Details__c</fullName>
        <label>Plat as Prod Priority Acct Qtrly Goals</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_as_a_Product__c</fullName>
        <label>Platform as a Product Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Active Opportunity</fullName>
                </value>
                <value>
                    <fullName>B - Target Accounts</fullName>
                    <label>B - Priority Accounts</label>
                </value>
                <value>
                    <fullName>C - Limited Knowledge</fullName>
                </value>
                <value>
                    <fullName>D - No opp next 18-24 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publicly_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly Held</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>